# whisper

./: .gitignore  LICENSE  README.md  _binder_test_payload.spec  agent.py  agent_configured.spec  binder.py  builder.py  debug2.py  debug3.py  debug_connect.py  debug_pi.py  plugin_base.py  pyproject.toml  requirements.txt  server.py  stager.ps1  stub.spec  stub_c.c  stub_generator.py  test_all.py  test_units.py  web_server.py  whisper.py  whisper.spec  whisper_config.py  whisper_crypto.py  whisper_logging.py  whisper_protocol.py
.github/workflows/: test.yml
plugins/: __init__.py  _helpers.py  anti_vm.py  browser_harvest.py  clipboard.py  core.py  crypto_clipper.py  crypto_steal.py  dns_hijack.py  file_hunter.py  file_manager.py  hvnc.py  keylogger.py  lateral.py  persistence.py  process_inject.py  ransomware.py  screenshot.py  shell.py  uac_bypass.py  vuln_scan.py  webcam.py  wifi_harvest.py
