[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "whisper-c2"
version = "3.1.0"
description = "Modular C2 framework with plugin system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
whisper = "whisper:UnifiedApp"
whisper-server = "server:MainApp"
whisper-builder = "builder:BuilderApp"
whisper-web = "web_server:main"

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
